Attempt to prevent banner scrolling on mobile

--- a/app/assets/stylesheets/banner.css.scss
+++ b/app/assets/stylesheets/banner.css.scss
@@ -1,4 +1,8 @@
 /* Banner */
+html, body { overflow-x: hidden; }
+
+body { position: relative; }
+
 #banner {
   /* background: url('http://img3.wikia.nocookie.net/__cb20130728175753/seirei-tsukai-no-blade-dance/images/a/a1/STnBD_V11_002.jpg') -798px -460px; */
   height: 30%;
